# lx

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
crates/lx-acceptance/: Cargo.toml  README.md
crates/lx-acceptance/intents/: intents.toml
crates/lx-acceptance/src/: engine.rs  fewshot.rs  fieldmap.rs  intents.rs  judge.rs  main.rs  oracle.rs  report.rs
crates/lx-config/: Cargo.toml  config.example.toml
crates/lx-config/src/: api_key.rs  lib.rs  types.rs
crates/lx-core/: Cargo.toml  build.rs
crates/lx-core/src/: error.rs  exit.rs  io.rs  lib.rs  output.rs  platform.rs  version.rs
crates/lx-llm/: Cargo.toml
crates/lx-llm/src/: anthropic.rs  client.rs  error.rs  fragments.rs  lang.rs  lib.rs  ollama.rs  openai.rs  schema.rs
crates/lx-redact/: Cargo.toml
crates/lx-redact/src/: entropy.rs  lib.rs  patterns.rs
crates/lx-redact/tests/: corpus.rs
crates/lx-testkit/: Cargo.toml
crates/lx-testkit/src/: assertions.rs  binary.rs  lib.rs  mock.rs  recording.rs
tools/lx/: Cargo.toml  README.md
tools/lx/src/: catalog.rs  config_cmd.rs  lib.rs  main.rs  model.rs  render.rs
tools/lx/tests/: integration.rs  system.rs
tools/lx/tests/snapshots/: integration__snapshot_grouped_plain.snap  integration__snapshot_json.snap
tools/lxask/: Cargo.toml  README.md
tools/lxask/prompts/: system.txt
tools/lxask/src/: main.rs  run.rs
tools/lxask/tests/: eval.rs  integration.rs  system.rs
tools/lxask/tests/fixtures/: context.txt  question.txt
tools/lxask/tests/snapshots/: integration__snapshot_json_output.snap  integration__snapshot_plain_output.snap
tools/lxclog/: Cargo.toml  README.md
tools/lxclog/prompts/: system.txt
tools/lxclog/src/: main.rs  run.rs
tools/lxclog/tests/: eval.rs  integration.rs  system.rs
tools/lxclog/tests/fixtures/: git_log_with_secret.txt  git_log_with_tags.txt  sample_git_log.txt
tools/lxclog/tests/snapshots/: integration__snapshot_json_output.snap  integration__snapshot_plain_output.snap
tools/lxcurl/: Cargo.toml  README.md
tools/lxcurl/prompts/: system.txt
tools/lxcurl/src/: main.rs  run.rs
tools/lxcurl/tests/: eval.rs  integration.rs  system.rs
tools/lxcurl/tests/fixtures/: get_users.txt  post_json.txt  with_header.txt
tools/lxcurl/tests/snapshots/: integration__snapshot_json_output.snap  integration__snapshot_plain_output.snap
tools/lxcve/: Cargo.toml  README.md
tools/lxcve/prompts/: system.txt
tools/lxcve/src/: main.rs  run.rs
tools/lxcve/tests/: eval.rs  integration.rs  system.rs
tools/lxcve/tests/fixtures/: cargo_lock_vulnerable.toml  package_lock_clean.json
tools/lxcve/tests/snapshots/: integration__snapshot_json_output.snap  integration__snapshot_plain_output.snap
tools/lxdebug/: Cargo.toml  README.md
tools/lxdebug/prompts/: system.txt
tools/lxdebug/src/: main.rs  run.rs
tools/lxdebug/tests/: eval.rs  integration.rs  system.rs
tools/lxdebug/tests/fixtures/: enoent_error.txt  error_with_secret.txt  missing_module.txt
tools/lxdns/: Cargo.toml  README.md
tools/lxdns/prompts/: system.txt
tools/lxdns/src/: main.rs  run.rs
tools/lxdns/tests/: eval.rs  integration.rs  system.rs
tools/lxdns/tests/fixtures/: dns_nxdomain.txt
tools/lxdoc/: Cargo.toml  README.md
tools/lxdoc/prompts/: system.txt
tools/lxdoc/src/: main.rs  run.rs
tools/lxdoc/tests/: eval.rs  integration.rs  system.rs
tools/lxerrno/: Cargo.toml  README.md
tools/lxerrno/prompts/: system.txt
tools/lxerrno/src/: main.rs  run.rs
tools/lxerrno/tests/: eval.rs  integration.rs  system.rs
tools/lxfind/: Cargo.toml  README.md
tools/lxfind/prompts/: system.txt
tools/lxfind/src/: main.rs  run.rs
tools/lxfind/tests/: eval.rs  integration.rs  system.rs
tools/lxfirewall/: Cargo.toml  README.md
tools/lxfirewall/prompts/: system.txt
tools/lxfirewall/src/: main.rs  run.rs
tools/lxfirewall/tests/: eval.rs  integration.rs  system.rs
tools/lxgraph/: Cargo.toml  README.md
tools/lxgraph/prompts/: system.txt
tools/lxgraph/src/: main.rs  run.rs
tools/lxgraph/tests/: eval.rs  integration.rs  system.rs
tools/lxhttp/: Cargo.toml  README.md
tools/lxhttp/prompts/: system.txt
tools/lxhttp/src/: lib.rs  main.rs  run.rs
tools/lxhttp/tests/: eval.rs  integration.rs  system.rs
tools/lxip/: Cargo.toml  README.md
tools/lxip/prompts/: system.txt
tools/lxip/src/: main.rs  run.rs
tools/lxip/tests/: eval.rs  integration.rs  system.rs
tools/lxkill/: Cargo.toml  README.md
tools/lxkill/prompts/: system.txt
tools/lxkill/src/: main.rs  run.rs
tools/lxkill/tests/: eval.rs  integration.rs  system.rs
tools/lxlog/: Cargo.toml  README.md
tools/lxlog/prompts/: system.txt
tools/lxlog/src/: main.rs  run.rs
tools/lxlog/tests/: eval.rs  integration.rs  system.rs
tools/lxmakefile/: Cargo.toml  README.md
tools/lxmakefile/prompts/: system.txt
tools/lxmakefile/src/: main.rs  run.rs
tools/lxmakefile/tests/: eval.rs  integration.rs  system.rs
tools/lxman/: Cargo.toml  README.md
tools/lxman/prompts/: system.txt
tools/lxman/src/: main.rs  run.rs
tools/lxman/tests/: eval.rs  integration.rs  system.rs
tools/lxmock/: Cargo.toml  README.md
tools/lxmock/prompts/: system.txt
tools/lxmock/src/: main.rs  run.rs
tools/lxmock/tests/: eval.rs  integration.rs  system.rs
tools/lxnotes/: Cargo.toml  README.md
tools/lxnotes/prompts/: actions_system.txt  system.txt
tools/lxnotes/src/: main.rs  run.rs
tools/lxnotes/tests/: eval.rs  integration.rs  system.rs
tools/lxpatch/: Cargo.toml  README.md
tools/lxpatch/prompts/: system.txt
tools/lxpatch/src/: main.rs  run.rs
tools/lxpatch/tests/: eval.rs  integration.rs  system.rs
tools/lxping/: Cargo.toml  README.md
tools/lxping/prompts/: system.txt
tools/lxping/src/: lib.rs  main.rs  run.rs
tools/lxping/tests/: eval.rs  integration.rs  system.rs
tools/lxprintf/: Cargo.toml  README.md
tools/lxprintf/prompts/: system.txt
tools/lxprintf/src/: main.rs  run.rs
tools/lxprintf/tests/: eval.rs  integration.rs  system.rs
(+778 files in other folders)
