[package]
name = "lx-llm"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LLM transport layer for LX Coreutils (OpenAI-compatible + Anthropic native)"

[dependencies]
lx-core   = { workspace = true }
lx-config = { workspace = true }
ureq      = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
