[package]
name = "lx-testkit"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Test helpers for LX Coreutils tools: MockLlmClient, RecordingLlmClient, shared assertions"

[lib]
# No binary output. Used only as dev-dependency by tool crates.

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-redact  = { workspace = true }
serde_json = { workspace = true }
