[package]
name = "lxdebug"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Analyse an error message and suggest a fix"

[[bin]]
name = "lxdebug"
path = "src/main.rs"

[lib]
name = "lxdebug"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
lx-redact  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
