[package]
name = "lxdns"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Diagnose DNS problems from dig, nslookup, or host output"

[[bin]]
name = "lxdns"
path = "src/main.rs"

[lib]
name = "lxdns"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
