[package]
name = "lxerrno"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Explain an error code HTTP errno or exit"

[[bin]]
name = "lxerrno"
path = "src/main.rs"

[lib]
name = "lxerrno"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
