[package]
name = "lxfind"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Semantic find locating files by description"

[[bin]]
name = "lxfind"
path = "src/main.rs"

[lib]
name = "lxfind"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
