[package]
name = "lxhttp"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Explain HTTP request failures from curl -v output or response headers"

[[bin]]
name = "lxhttp"
path = "src/main.rs"

[lib]
name = "lxhttp"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
