[package]
name = "lxip"
version = "1.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generate ip/netsh/ifconfig commands from a plain-English description"

[[bin]]
name = "lxip"
path = "src/main.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
