[package]
name = "lxkill"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generate the command to find and kill a described process"

[[bin]]
name = "lxkill"
path = "src/main.rs"

[lib]
name = "lxkill"
path = "src/lib.rs"

[dependencies]
lx-core   = { workspace = true }
lx-llm    = { workspace = true }
lx-config = { workspace = true }
clap      = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
