[package]
name = "lxmock"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generate realistic mock/fixture data from a plain-English description"

[[bin]]
name = "lxmock"
path = "src/main.rs"

[lib]
name = "lxmock"
path = "src/lib.rs"

[dependencies]
lx-core   = { workspace = true }
lx-llm    = { workspace = true }
lx-config = { workspace = true }
clap      = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
