[package]
name = "lxpatch"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Turn a described change into an applyable unified diff"

[[bin]]
name = "lxpatch"
path = "src/main.rs"

[lib]
name = "lxpatch"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
