[package]
name = "lxping"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Interpret ping/traceroute output — network, host, DNS, or ok"

[[bin]]
name = "lxping"
path = "src/main.rs"

[lib]
name = "lxping"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
