[package]
name = "lxprintf"
version = "1.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Build a printf or date format string from a plain-English description"

[[bin]]
name = "lxprintf"
path = "src/main.rs"

[lib]
name = "lxprintf"
path = "src/lib.rs"

[dependencies]
lx-core    = { workspace = true }
lx-llm     = { workspace = true }
lx-config  = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
lx-testkit = { workspace = true }
insta      = { workspace = true }
